--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -58,7 +58,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 5    | David Platt              | 📺 [The Joy of UX in .NET MAUI: An MBTA Case Study](https://www.youtube.com/watch?v=PGdihJt1pzA)                                                          |
 | 6    | Available                |                                                                                                                                                            |
 | 7    | Sebastian Jensen         | 📰 [Creating a Gauge Control with SkiaSharp in .NET MAUI](https://medium.com/@tsjdevapps/create-a-gauge-control-using-skiasharp-in-net-maui-ce418e6320fb) |
-| 8    | Roman Jasek              | TBA                                                                                                                                                        |
+| 8    | Roman Jasek              | 📰 [MAUI Environment Ribbon Part 1 (links to parts 2 & 3)](https://www.riganti.cz/en/blog-posts/maui-environment-ribbon-intro-and-basic-ui-part-1)        |
 | 9    | Mark Allibone            | Getting fit with MAUIReactor                                                                                                                               |
 | 10   | Daniel Quintero Henao    | TBA                                                                                                                                                        |
 | 11   | Matthew Robbins & SSW TV | Building Red Point                                                                                                                                         |
