--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -59,7 +59,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 6    | Available                |                                                                                                                                                            |
 | 7    | Sebastian Jensen         | 📰 [Creating a Gauge Control with SkiaSharp in .NET MAUI](https://medium.com/@tsjdevapps/create-a-gauge-control-using-skiasharp-in-net-maui-ce418e6320fb) |
 | 8    | Roman Jasek              | 📰 [MAUI Environment Ribbon Part 1 (links to parts 2 & 3)](https://www.riganti.cz/en/blog-posts/maui-environment-ribbon-intro-and-basic-ui-part-1)        |
-| 9    | Mark Allibone            | Getting fit with MAUIReactor                                                                                                                               |
+| 9    | Mark Allibone            | 📰 [Getting fit with MAUIReactor](https://mallibone.com/post/maui-reactor-fit)                                                                            |
 | 10   | Daniel Quintero Henao    | TBA                                                                                                                                                        |
 | 11   | Matthew Robbins & SSW TV | Building Red Point                                                                                                                                         |
 | 12   | Anton Polkanov           | TBA                                                                                                                                                        |
