--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -61,7 +61,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 8    | Roman Jasek              | 📰 [MAUI Environment Ribbon Part 1 (links to parts 2 & 3)](https://www.riganti.cz/en/blog-posts/maui-environment-ribbon-intro-and-basic-ui-part-1)        |
 | 9    | Mark Allibone            | 📰 [Getting fit with MAUIReactor](https://mallibone.com/post/maui-reactor-fit)                                                                            |
 | 10   | Daniel Quintero Henao    | TBA                                                                                                                                                        |
-| 11   | Matthew Robbins & SSW TV | Building Red Point                                                                                                                                         |
+| 11   | Matthew Robbins & SSW TV | 📺 [Building Red Point - Unity + .NET MAUI Rock CLimbing app](https://youtu.be/CfodwPUSfSg?si=qmKwSkAnVhynGnuX)                                           |
 | 12   | Anton Polkanov           | TBA                                                                                                                                                        |
 | 13   | Michael Stonis           | .NET MAUI Bottom Sheet                                                                                                                                     |
 | 14   | Michael Stonis           | In-page Navigation                                                                                                                                         |
@@ -73,7 +73,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 20   | Shaun Lawrence           | TBA                                                                                                                                                        |
 | 21   | Nick Alonge              | TBA                                                                                                                                                        |
 | 22   | Sam Basu                 | Waiting in Style with .NET MAUI Apps                                                                                                                       |
-| 23   | David Nsai               | TBA                                                                                                                                                        |
+| 23   | David Nsai               | Onboarding and Sign Up using DevExpress controls                                                                                                           |
 | 24   | Héctor Pérez             | TBA                                                                                                                                                        |
 | 25   | Pavle Davitković         | TBA                                                                                                                                                        |
 | 26   | Farshad Momtaz           | TBA                                                                                                                                                        |
