--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -62,7 +62,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 9    | Mark Allibone            | 📰 [Getting fit with MAUIReactor](https://mallibone.com/post/maui-reactor-fit)                                                                            |
 | 10   | Daniel Quintero Henao    | TBA                                                                                                                                                        |
 | 11   | Matthew Robbins & SSW TV | 📺 [Building Red Point - Unity + .NET MAUI Rock CLimbing app](https://youtu.be/CfodwPUSfSg?si=qmKwSkAnVhynGnuX)                                           |
-| 12   | Anton Polkanov           | TBA                                                                                                                                                        |
+| 12   | Anton Polkanov           | 📺 [Getting started with Android bindings in .NET MAUI](https://www.youtube.com/watch?v=KaRMUa3Sg38)                                                      |
 | 13   | Michael Stonis           | .NET MAUI Bottom Sheet                                                                                                                                     |
 | 14   | Michael Stonis           | In-page Navigation                                                                                                                                         |
 | 15   | Nick Kovalsky            | TBA                                                                                                                                                        |
