--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -63,7 +63,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 10   | Daniel Quintero Henao    | TBA                                                                                                                                                        |
 | 11   | Matthew Robbins & SSW TV | 📺 [Building Red Point - Unity + .NET MAUI Rock CLimbing app](https://youtu.be/CfodwPUSfSg?si=qmKwSkAnVhynGnuX)                                           |
 | 12   | Anton Polkanov           | 📺 [Getting started with Android bindings in .NET MAUI](https://www.youtube.com/watch?v=KaRMUa3Sg38)                                                      |
-| 13   | Michael Stonis           | .NET MAUI Bottom Sheet                                                                                                                                     |
+| 13   | Michael Stonis           | 📰 [What is this sheet? A bottom sheet for .NET MAUI](https://www.ston.is/what-is-this-sheet-a-bottom-sheet-for-maui/)                                    |
 | 14   | Michael Stonis           | In-page Navigation                                                                                                                                         |
 | 15   | Nick Kovalsky            | TBA                                                                                                                                                        |
 | 16   | Roman Jasek              | TBA                                                                                                                                                        |
