Added Daniel day 10

--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -60,7 +60,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 7    | Sebastian Jensen         | 📰 [Creating a Gauge Control with SkiaSharp in .NET MAUI](https://medium.com/@tsjdevapps/create-a-gauge-control-using-skiasharp-in-net-maui-ce418e6320fb) |
 | 8    | Roman Jasek              | 📰 [MAUI Environment Ribbon Part 1 (links to parts 2 & 3)](https://www.riganti.cz/en/blog-posts/maui-environment-ribbon-intro-and-basic-ui-part-1)        |
 | 9    | Mark Allibone            | 📰 [Getting fit with MAUIReactor](https://mallibone.com/post/maui-reactor-fit)                                                                            |
-| 10   | Daniel Quintero Henao    | TBA                                                                                                                                                        |
+| 10   | Daniel Quintero Henao    | 📺 [Custom animations in .NET MAUI](https://www.youtube.com/watch?v=bw5APWXf1AI) (Spanish)                                                                |
 | 11   | Matthew Robbins & SSW TV | 📺 [Building Red Point - Unity + .NET MAUI Rock CLimbing app](https://youtu.be/CfodwPUSfSg?si=qmKwSkAnVhynGnuX)                                           |
 | 12   | Anton Polkanov           | 📺 [Getting started with Android bindings in .NET MAUI](https://www.youtube.com/watch?v=KaRMUa3Sg38)                                                      |
 | 13   | Michael Stonis           | 📰 [What is this sheet? A bottom sheet for .NET MAUI](https://www.ston.is/what-is-this-sheet-a-bottom-sheet-for-maui/)                                    |
