--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -65,7 +65,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 12   | Anton Polkanov           | 📺 [Getting started with Android bindings in .NET MAUI](https://www.youtube.com/watch?v=KaRMUa3Sg38)                                                      |
 | 13   | Michael Stonis           | 📰 [What is this sheet? A bottom sheet for .NET MAUI](https://www.ston.is/what-is-this-sheet-a-bottom-sheet-for-maui/)                                    |
 | 14   | Michael Stonis           | 📰 [In-page Navigation for .NET MAUI](https://www.ston.is/componentizer4k-in-page-navigation-for-.net-maui/)                                              |
-| 15   | Nick Kovalsky            | TBA                                                                                                                                                        |
+| 15   | Nick Kovalsky            | 📰 [The Quest to Create Drawn .NET MAUI Apps](https://taublast.github.io/posts/MauiJuly/)                                                                 |
 | 16   | Roman Jasek              | TBA                                                                                                                                                        |
 | 17   | Diego Rivero             | TBA                                                                                                                                                        |
 | 18   | Julian Ewers-Peters      | TBA                                                                                                                                                        |
