--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -66,9 +66,9 @@ These are just examples. If you think something is interesting, there's a good c
 | 13   | Michael Stonis           | 📰 [What is this sheet? A bottom sheet for .NET MAUI](https://www.ston.is/what-is-this-sheet-a-bottom-sheet-for-maui/)                                    |
 | 14   | Michael Stonis           | 📰 [In-page Navigation for .NET MAUI](https://www.ston.is/componentizer4k-in-page-navigation-for-.net-maui/)                                              |
 | 15   | Nick Kovalsky            | 📰 [The Quest to Create Drawn .NET MAUI Apps](https://taublast.github.io/posts/MauiJuly/)                                                                 |
-| 16   | Roman Jasek              | 📰 [MAUI Environment Ribbon Part 4 (links to parts 5 & 6)](https://www.riganti.cz/en/blog-posts/maui-environment-ribbon-ui-customization-part-4)                                                               |
-| 17   | Diego Rivero             | TBA                                                                                                                                                        |
-| 18   | Julian Ewers-Peters      | TBA                                                                                                                                                        |
+| 16   | Roman Jasek              | 📰 [MAUI Environment Ribbon Part 4 (links to parts 5 & 6)](https://www.riganti.cz/en/blog-posts/maui-environment-ribbon-ui-customization-part-4)          |
+| 17   | Diego Rivero             | 📰 [Emojis in .NET MAUI](https://grialkit.com/blog/emojis-in-net-maui)                                                                                    |
+| 18   | Julian Ewers-Peters      | 📰 [White-labelling .NET MAUI apps](https://blog.ewers-peters.de/white-labeling-net-maui-apps)                                                            |
 | 19   | Matt Goldman             | Passing through attached behaviors to a child control                                                                                                      |
 | 20   | Shaun Lawrence           | TBA                                                                                                                                                        |
 | 21   | Nick Alonge              | TBA                                                                                                                                                        |
