--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -69,7 +69,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 16   | Roman Jasek              | 📰 [MAUI Environment Ribbon Part 4 (links to parts 5 & 6)](https://www.riganti.cz/en/blog-posts/maui-environment-ribbon-ui-customization-part-4)          |
 | 17   | Diego Rivero             | 📰 [Emojis in .NET MAUI](https://grialkit.com/blog/emojis-in-net-maui)                                                                                    |
 | 18   | Julian Ewers-Peters      | 📰 [White-labelling .NET MAUI apps](https://blog.ewers-peters.de/white-labeling-net-maui-apps)                                                            |
-| 19   | Matt Goldman             | Passing through attached behaviors to a child control                                                                                                      |
+| 19   | Matt Goldman             | 📰 [Passing through attached behaviors to a child control](https://goforgoldman.com/posts/passthrough-behavior/)                                          |
 | 20   | Shaun Lawrence           | TBA                                                                                                                                                        |
 | 21   | Nick Alonge              | TBA                                                                                                                                                        |
 | 22   | Sam Basu                 | Web Styles in Native Apps                                                                                                                                  |
