Added Nick's link

--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -70,8 +70,8 @@ These are just examples. If you think something is interesting, there's a good c
 | 17   | Diego Rivero             | 📰 [Emojis in .NET MAUI](https://grialkit.com/blog/emojis-in-net-maui)                                                                                    |
 | 18   | Julian Ewers-Peters      | 📰 [White-labelling .NET MAUI apps](https://blog.ewers-peters.de/white-labeling-net-maui-apps)                                                            |
 | 19   | Matt Goldman             | 📰 [Passing through attached behaviors to a child control](https://goforgoldman.com/posts/passthrough-behavior/)                                          |
-| 20   | Shaun Lawrence           | TBA                                                                                                                                                        |
-| 21   | Nick Alonge              | TBA                                                                                                                                                        |
+| 20   | Shaun Lawrence           | 🤒 Coming soon...                                                                                                                                         |
+| 21   | Nick Alonge              | 📰 [Using browser local storage with .NET MAUI Blazor hybrid](https://dev.to/nick_alonge/using-local-browser-storage-in-net-maui-blazor-hybrid-3loe)      |
 | 22   | Sam Basu                 | Web Styles in Native Apps                                                                                                                                  |
 | 23   | David Nsai               | Onboarding and Sign Up using DevExpress controls                                                                                                           |
 | 24   | Héctor Pérez             | TBA                                                                                                                                                        |
