Added Sam Basu link

--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -72,7 +72,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 19   | Matt Goldman             | 📰 [Passing through attached behaviors to a child control](https://goforgoldman.com/posts/passthrough-behavior/)                                          |
 | 20   | Shaun Lawrence           | 🤒 Coming soon...                                                                                                                                         |
 | 21   | Nick Alonge              | 📰 [Using browser local storage with .NET MAUI Blazor hybrid](https://dev.to/nick_alonge/using-local-browser-storage-in-net-maui-blazor-hybrid-3loe)      |
-| 22   | Sam Basu                 | Web Styles in Native Apps                                                                                                                                  |
+| 22   | Sam Basu                 | 📰 [Web Styles in Native Apps](https://www.telerik.com/blogs/web-styles-native-apps)                                                                      |
 | 23   | David Nsai               | Onboarding and Sign Up using DevExpress controls                                                                                                           |
 | 24   | Héctor Pérez             | TBA                                                                                                                                                        |
 | 25   | Pavle Davitković         | TBA                                                                                                                                                        |
