Added Hector Prez link

--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -74,7 +74,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 21   | Nick Alonge              | 📰 [Using browser local storage with .NET MAUI Blazor hybrid](https://dev.to/nick_alonge/using-local-browser-storage-in-net-maui-blazor-hybrid-3loe)                             |
 | 22   | Sam Basu                 | 📰 [Web Styles in Native Apps](https://www.telerik.com/blogs/web-styles-native-apps)                                                                                             |
 | 23   | David Nsai               | 📰 [Creating engaging onboarding experiences with DevExpress](https://medium.com/@nsaidave/creating-an-engaging-onboarding-experience-in-net-maui-using-devexpress-a948592df09e) |
-| 24   | Héctor Pérez             | TBA                                                                                                                                                                               |
+| 24   | Héctor Pérez             | 📰 [Apply Different Item Templates in One CollectionView](https://devs.school/net-maui-data-template-selector/)                                                                  |
 | 25   | Pavle Davitković         | TBA                                                                                                                                                                               |
 | 26   | Farshad Momtaz           | TBA                                                                                                                                                                               |
 | 27   | Adolfo Marinucci         | Building a task management app with MAUIReactor                                                                                                                                   |
