--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -76,8 +76,8 @@ These are just examples. If you think something is interesting, there's a good c
 | 23   | David Nsai               | 📰 [Creating engaging onboarding experiences with DevExpress](https://medium.com/@nsaidave/creating-an-engaging-onboarding-experience-in-net-maui-using-devexpress-a948592df09e) |
 | 24   | Héctor Pérez             | 📰 [Apply Different Item Templates in One CollectionView](https://devs.school/net-maui-data-template-selector/)                                                                  |
 | 25   | Pavle Davitković         | TBA                                                                                                                                                                               |
-| 26   | Farshad Momtaz           | 📰 [Building a Sudoku game in .NET MAUI](https://dev.to/fdmomtaz/my-journey-in-making-a-game-with-net-maui-4hjk)                                                                                                                                                                               |
-| 27   | Adolfo Marinucci         | Building a task management app with MAUIReactor                                                                                                                                   |
+| 26   | Farshad Momtaz           | 📰 [Building a Sudoku game in .NET MAUI](https://dev.to/fdmomtaz/my-journey-in-making-a-game-with-net-maui-4hjk)                                                                 |
+| 27   | Adolfo Marinucci         | 📺 [Building a task management app with MAUIReactor](https://www.youtube.com/watch?v=q-oM2PO0ZtU)                                                                                |
 | 28   | Daniel Monettelli        | TBA                                                                                                                                                                               |
 | 29   | David Ortinau            | TBA                                                                                                                                                                               |
 | 30   | Tanaka Mawere            | Making an InDrive/Uber clone using MAUI                                                                                                                                           |
