--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -78,8 +78,8 @@ These are just examples. If you think something is interesting, there's a good c
 | 25   | Pavle Davitković         | TBA                                                                                                                                                                               |
 | 26   | Farshad Momtaz           | 📰 [Building a Sudoku game in .NET MAUI](https://dev.to/fdmomtaz/my-journey-in-making-a-game-with-net-maui-4hjk)                                                                 |
 | 27   | Adolfo Marinucci         | 📺 [Building a task management app with MAUIReactor](https://www.youtube.com/watch?v=q-oM2PO0ZtU)                                                                                |
-| 28   | Daniel Monettelli        | TBA                                                                                                                                                                               |
-| 29   | David Ortinau            | TBA                                                                                                                                                                               |
+| 28   | Daniel Monettelli        | 📰 [Rantiy Mobile app with .NET MAUI, Part 1](https://danielmonettelli.github.io/posts/rantiy-mobile-app-with-dotnetmaui-part-1/)                                                |
+| 29   | David Ortinau            | 📰 [Chasing Curiosity](https://dev.to/davidortinau/chasing-curiosity-4ip2)                                                                                                       |
 | 30   | Tanaka Mawere            | Making an InDrive/Uber clone using MAUI                                                                                                                                           |
 | 31   | Brandon Minnick          | Upgrading from Xamarin.CommunityToolkit.Markup to CommunityToolkit.Maui.Markup                                                                                                    |
 
