Added Shaun and Brandon

--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -49,39 +49,39 @@ These are just examples. If you think something is interesting, there's a good c
 
 ## .NET MAUI UI July Schedule
 
-| Date | Person                   | Content                                                                                                                                                                           |
-| ---- | ------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 1    | Matt Goldman             | 📰 [Adding a parallax effect to CollectionView](/posts/parallax-collection/)                                                                                                     |
-| 2    | David Ortinau            | 📰 [All the lists in .NET MAUI](https://dev.to/davidortinau/all-the-lists-in-net-maui-33bd)                                                                                      |
-| 3    | Luis Beltran             | 📰 [Animated splash screen in .NET MAUI Android](https://dev.to/icebeam7/animated-splash-screen-in-net-maui-android-2ipg)                                                        |
-| 4    | Vladislav Antonyuk       | 📰 [Barcode scanning with .NET MAUI](https://vladislavantonyuk.github.io/articles/Various-methods-for-barcode-scanning-in-.NET-MAUI/)                                            |
-| 5    | David Platt              | 📺 [The Joy of UX in .NET MAUI: An MBTA Case Study](https://www.youtube.com/watch?v=PGdihJt1pzA)                                                                                 |
-| 6    | Available                |                                                                                                                                                                                   |
-| 7    | Sebastian Jensen         | 📰 [Creating a Gauge Control with SkiaSharp in .NET MAUI](https://medium.com/@tsjdevapps/create-a-gauge-control-using-skiasharp-in-net-maui-ce418e6320fb)                        |
-| 8    | Roman Jasek              | 📰 [MAUI Environment Ribbon Part 1 (links to parts 2 & 3)](https://www.riganti.cz/en/blog-posts/maui-environment-ribbon-intro-and-basic-ui-part-1)                               |
-| 9    | Mark Allibone            | 📰 [Getting fit with MAUIReactor](https://mallibone.com/post/maui-reactor-fit)                                                                                                   |
-| 10   | Daniel Quintero Henao    | 📺 [Custom animations in .NET MAUI](https://www.youtube.com/watch?v=bw5APWXf1AI) (Spanish)                                                                                       |
-| 11   | Matthew Robbins & SSW TV | 📺 [Building Red Point - Unity + .NET MAUI Rock CLimbing app](https://youtu.be/CfodwPUSfSg?si=qmKwSkAnVhynGnuX)                                                                  |
-| 12   | Anton Polkanov           | 📺 [Getting started with Android bindings in .NET MAUI](https://www.youtube.com/watch?v=KaRMUa3Sg38)                                                                             |
-| 13   | Michael Stonis           | 📰 [What is this sheet? A bottom sheet for .NET MAUI](https://www.ston.is/what-is-this-sheet-a-bottom-sheet-for-maui/)                                                           |
-| 14   | Michael Stonis           | 📰 [In-page Navigation for .NET MAUI](https://www.ston.is/componentizer4k-in-page-navigation-for-.net-maui/)                                                                     |
-| 15   | Nick Kovalsky            | 📰 [The Quest to Create Drawn .NET MAUI Apps](https://taublast.github.io/posts/MauiJuly/)                                                                                        |
-| 16   | Roman Jasek              | 📰 [MAUI Environment Ribbon Part 4 (links to parts 5 & 6)](https://www.riganti.cz/en/blog-posts/maui-environment-ribbon-ui-customization-part-4)                                 |
-| 17   | Diego Rivero             | 📰 [Emojis in .NET MAUI](https://grialkit.com/blog/emojis-in-net-maui)                                                                                                           |
-| 18   | Julian Ewers-Peters      | 📰 [White-labelling .NET MAUI apps](https://blog.ewers-peters.de/white-labeling-net-maui-apps)                                                                                   |
-| 19   | Matt Goldman             | 📰 [Passing through attached behaviors to a child control](https://goforgoldman.com/posts/passthrough-behavior/)                                                                 |
-| 20   | Shaun Lawrence           | 🤒 Coming soon...                                                                                                                                                                |
-| 21   | Nick Alonge              | 📰 [Using browser local storage with .NET MAUI Blazor hybrid](https://dev.to/nick_alonge/using-local-browser-storage-in-net-maui-blazor-hybrid-3loe)                             |
-| 22   | Sam Basu                 | 📰 [Web Styles in Native Apps](https://www.telerik.com/blogs/web-styles-native-apps)                                                                                             |
-| 23   | David Nsai               | 📰 [Creating engaging onboarding experiences with DevExpress](https://medium.com/@nsaidave/creating-an-engaging-onboarding-experience-in-net-maui-using-devexpress-a948592df09e) |
-| 24   | Héctor Pérez             | 📰 [Apply Different Item Templates in One CollectionView](https://devs.school/net-maui-data-template-selector/)                                                                  |
-| 25   | Pavle Davitković         | TBA                                                                                                                                                                               |
-| 26   | Farshad Momtaz           | 📰 [Building a Sudoku game in .NET MAUI](https://dev.to/fdmomtaz/my-journey-in-making-a-game-with-net-maui-4hjk)                                                                 |
-| 27   | Adolfo Marinucci         | 📺 [Building a task management app with MAUIReactor](https://www.youtube.com/watch?v=q-oM2PO0ZtU)                                                                                |
-| 28   | Daniel Monettelli        | 📰 [Rantiy Mobile app with .NET MAUI, Part 1](https://danielmonettelli.github.io/posts/rantiy-mobile-app-with-dotnetmaui-part-1/)                                                |
-| 29   | David Ortinau            | 📰 [Chasing Curiosity](https://dev.to/davidortinau/chasing-curiosity-4ip2)                                                                                                       |
-| 30   | Tanaka Mawere            | Making an InDrive/Uber clone using MAUI                                                                                                                                           |
-| 31   | Brandon Minnick          | Upgrading from Xamarin.CommunityToolkit.Markup to CommunityToolkit.Maui.Markup                                                                                                    |
+| Date | Person                   | Content                                                                                                                                                                                                  |
+| ---- | ------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 1    | Matt Goldman             | 📰 [Adding a parallax effect to CollectionView](/posts/parallax-collection/)                                                                                                                            |
+| 2    | David Ortinau            | 📰 [All the lists in .NET MAUI](https://dev.to/davidortinau/all-the-lists-in-net-maui-33bd)                                                                                                             |
+| 3    | Luis Beltran             | 📰 [Animated splash screen in .NET MAUI Android](https://dev.to/icebeam7/animated-splash-screen-in-net-maui-android-2ipg)                                                                               |
+| 4    | Vladislav Antonyuk       | 📰 [Barcode scanning with .NET MAUI](https://vladislavantonyuk.github.io/articles/Various-methods-for-barcode-scanning-in-.NET-MAUI/)                                                                   |
+| 5    | David Platt              | 📺 [The Joy of UX in .NET MAUI: An MBTA Case Study](https://www.youtube.com/watch?v=PGdihJt1pzA)                                                                                                        |
+| 6    | Available                |                                                                                                                                                                                                          |
+| 7    | Sebastian Jensen         | 📰 [Creating a Gauge Control with SkiaSharp in .NET MAUI](https://medium.com/@tsjdevapps/create-a-gauge-control-using-skiasharp-in-net-maui-ce418e6320fb)                                               |
+| 8    | Roman Jasek              | 📰 [MAUI Environment Ribbon Part 1 (links to parts 2 & 3)](https://www.riganti.cz/en/blog-posts/maui-environment-ribbon-intro-and-basic-ui-part-1)                                                      |
+| 9    | Mark Allibone            | 📰 [Getting fit with MAUIReactor](https://mallibone.com/post/maui-reactor-fit)                                                                                                                          |
+| 10   | Daniel Quintero Henao    | 📺 [Custom animations in .NET MAUI](https://www.youtube.com/watch?v=bw5APWXf1AI) (Spanish)                                                                                                              |
+| 11   | Matthew Robbins & SSW TV | 📺 [Building Red Point - Unity + .NET MAUI Rock CLimbing app](https://youtu.be/CfodwPUSfSg?si=qmKwSkAnVhynGnuX)                                                                                         |
+| 12   | Anton Polkanov           | 📺 [Getting started with Android bindings in .NET MAUI](https://www.youtube.com/watch?v=KaRMUa3Sg38)                                                                                                    |
+| 13   | Michael Stonis           | 📰 [What is this sheet? A bottom sheet for .NET MAUI](https://www.ston.is/what-is-this-sheet-a-bottom-sheet-for-maui/)                                                                                  |
+| 14   | Michael Stonis           | 📰 [In-page Navigation for .NET MAUI](https://www.ston.is/componentizer4k-in-page-navigation-for-.net-maui/)                                                                                            |
+| 15   | Nick Kovalsky            | 📰 [The Quest to Create Drawn .NET MAUI Apps](https://taublast.github.io/posts/MauiJuly/)                                                                                                               |
+| 16   | Roman Jasek              | 📰 [MAUI Environment Ribbon Part 4 (links to parts 5 & 6)](https://www.riganti.cz/en/blog-posts/maui-environment-ribbon-ui-customization-part-4)                                                        |
+| 17   | Diego Rivero             | 📰 [Emojis in .NET MAUI](https://grialkit.com/blog/emojis-in-net-maui)                                                                                                                                  |
+| 18   | Julian Ewers-Peters      | 📰 [White-labelling .NET MAUI apps](https://blog.ewers-peters.de/white-labeling-net-maui-apps)                                                                                                          |
+| 19   | Matt Goldman             | 📰 [Passing through attached behaviors to a child control](https://goforgoldman.com/posts/passthrough-behavior/)                                                                                        |
+| 20   | Shaun Lawrence           | 📰 [Creating a Sprite editor in .NET MAUI](https://blog.bijington.com/2024/07/31/creating-a-sprite-editor.html)                                                                                         |
+| 21   | Nick Alonge              | 📰 [Using browser local storage with .NET MAUI Blazor hybrid](https://dev.to/nick_alonge/using-local-browser-storage-in-net-maui-blazor-hybrid-3loe)                                                    |
+| 22   | Sam Basu                 | 📰 [Web Styles in Native Apps](https://www.telerik.com/blogs/web-styles-native-apps)                                                                                                                    |
+| 23   | David Nsai               | 📰 [Creating engaging onboarding experiences with DevExpress](https://medium.com/@nsaidave/creating-an-engaging-onboarding-experience-in-net-maui-using-devexpress-a948592df09e)                        |
+| 24   | Héctor Pérez             | 📰 [Apply Different Item Templates in One CollectionView](https://devs.school/net-maui-data-template-selector/)                                                                                         |
+| 25   | Pavle Davitković         | TBA                                                                                                                                                                                                      |
+| 26   | Farshad Momtaz           | 📰 [Building a Sudoku game in .NET MAUI](https://dev.to/fdmomtaz/my-journey-in-making-a-game-with-net-maui-4hjk)                                                                                        |
+| 27   | Adolfo Marinucci         | 📺 [Building a task management app with MAUIReactor](https://www.youtube.com/watch?v=q-oM2PO0ZtU)                                                                                                       |
+| 28   | Daniel Monettelli        | 📰 [Rantiy Mobile app with .NET MAUI, Part 1](https://danielmonettelli.github.io/posts/rantiy-mobile-app-with-dotnetmaui-part-1/)                                                                       |
+| 29   | David Ortinau            | 📰 [Chasing Curiosity](https://dev.to/davidortinau/chasing-curiosity-4ip2)                                                                                                                              |
+| 30   | Tanaka Mawere            | Making an InDrive/Uber clone using MAUI                                                                                                                                                                  |
+| 31   | Brandon Minnick          | 📰 [Upgrading from Xamarin.CommunityToolkit.Markup to CommunityToolkit.Maui.Markup](https://codetraveler.io/2024/07/29/upgrading-from-xamarin-communitytoolkit-markup-to-communitytoolkit-maui-markup/) |
 
 {: .goldie-table }
 
