Add MAUI UI July 204 back

--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -15,7 +15,7 @@ This will be the third year running this event, and in previous years we've had 
 
 * [MAUI UI July (2022)](/posts/maui-ui-july)
 * [MAUI UI July (2023)](/posts/maui-ui-july-23)
-
+* [MAUI UI July (2024)](/posts/mauiuijuly-24/)
 
 Each day in July, we'll add a blog post or video to the calendar below, showcasing something cool you can do with .NET MAUI. Be sure to bookmark/favourite this post and check back every day for new content!
 
