--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -50,39 +50,39 @@ These are just examples. If you think something is interesting, there's a good c
 
 ## .NET MAUI UI July Schedule
 
-| Date | Person | Content |
-| ---- | ------ | ------- |
-| 1    |        |         |
-| 2    |        |         |
-| 3    |        |         |
-| 4    |        |         |
-| 5    |        |         |
-| 6    |        |         |
-| 7    |        |         |
-| 8    |        |         |
-| 9    |        |         |
-| 10   |        |         |
-| 11   |        |         |
-| 12   |        |         |
-| 13   |        |         |
-| 14   |        |         |
-| 15   |        |         |
-| 16   |        |         |
-| 17   |        |         |
-| 18   |        |         |
-| 19   |        |         |
-| 20   |        |         |
-| 21   |        |         |
-| 22   |        |         |
-| 23   |        |         |
-| 24   |        |         |
-| 25   |        |         |
-| 26   |        |         |
-| 27   |        |         |
-| 28   |        |         |
-| 29   |        |         |
-| 30   |        |         |
-| 31   |        |         |
+| Date | Person            | Content |
+| ---- | ----------------- | ------- |
+| 1    |                   |         |
+| 2    |                   |         |
+| 3    |                   |         |
+| 4    |                   |         |
+| 5    |                   |         |
+| 6    |                   |         |
+| 7    |                   |         |
+| 8    |                   |         |
+| 9    |                   |         |
+| 10   | Almir Vuk         | TBC     |
+| 11   |                   |         |
+| 12   |                   |         |
+| 13   |                   |         |
+| 14   | John Bijsterbosch | TBC     |
+| 15   |                   |         |
+| 16   |                   |         |
+| 17   |                   |         |
+| 18   |                   |         |
+| 19   |                   |         |
+| 20   |                   |         |
+| 21   |                   |         |
+| 22   |                   |         |
+| 23   | David Nsai        | TBC     |
+| 24   |                   |         |
+| 25   |                   |         |
+| 26   |                   |         |
+| 27   | Steven Thewissen  | TBC     |
+| 28   |                   |         |
+| 29   |                   |         |
+| 30   |                   |         |
+| 31   |                   |         |
 
 {: .goldie-table }
 
