--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -72,7 +72,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 18   |                             |         |
 | 19   |                             |         |
 | 20   |                             |         |
-| 21   |                             |         |
+| 21   | Shaun Lawrence              | TBC     |
 | 22   |                             |         |
 | 23   | David Nsai                  | TBC     |
 | 24   | Luis Antonio Beltran Prieto | TBC     |
