Update MAUI UI July 2025 post to reflect the fourth year of the event and add Ed Schimmel to the participant list.

--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -11,7 +11,7 @@ It's time for #MAUIUIJuly again!
 
 Based on an idea [originally started for Xamarin by Steven Thewissen](https://thewissen.io/introducing-xamarin-ui-july/), MAUI UI July is a month-long, community-driven event where anyone gets to share some of their enthusiasm and passion for .NET MAUI.
 
-This will be the third year running this event, and in previous years we've had fantastic contributions from the community, covering an incredible range of things to do with .NET MAUI. You can check out previous years' contributions here:
+This will be the fourth year running this event, and in previous years we've had fantastic contributions from the community, covering an incredible range of things to do with .NET MAUI. You can check out previous years' contributions here:
 
 * [MAUI UI July (2022)](/posts/maui-ui-july)
 * [MAUI UI July (2023)](/posts/maui-ui-july-23)
@@ -58,7 +58,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 4    |                             |                                        |
 | 5    |                             |                                        |
 | 6    |                             |                                        |
-| 7    |                             |                                        |
+| 7    | Ed Schimmel                 | TBC                                    |
 | 8    |                             |                                        |
 | 9    |                             |                                        |
 | 10   | Almir Vuk                   | TBC                                    |
