Added Hector Rojas

--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -73,7 +73,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 19   |                             |                                                      |
 | 20   |                             |                                                      |
 | 21   | Shaun Lawrence              | TBC                                                  |
-| 22   |                             |                                                      |
+| 22   | Héctor Uriel Pérez Rojas    | TBC                                                  |
 | 23   | David Nsai                  | TBC                                                  |
 | 24   | Luis Antonio Beltran Prieto | TBC                                                  |
 | 25   | Nick Kovalsky               | Build Cross-Platform Games in .NET MAUI with DrawnUI |
