--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -79,7 +79,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 25   | Nick Kovalsky               | Build Cross-Platform Games in .NET MAUI with DrawnUI |
 | 26   |                             |                                                      |
 | 27   | Steven Thewissen            | TBC                                                  |
-| 28   |                             |                                                      |
+| 28   | Gulam Ali H.                | TBC                                                  |
 | 29   | Ed Gomez                    | TBC                                                  |
 | 30   |                             |                                                      |
 | 31   |                             |                                                      |
